Updated method in getUniqueWordCount